reverted dark mode. it was too moody

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 
 </head>
 
-<body class="dark-mode">
+<body class="">
   <app-root></app-root>
 </body>
 <footer class="spacer" style="height:100px;">
